SONAR-25263 Improve handling of AbsolutePathPredicate NPE when a relative path is provided